# finwhiz_ui

./: .env  .gitignore  DEBUGGING.md  FRONTEND_SETUP.md  QUICKSTART.md  README.md  UI_SUMMARY.md  docker-compose.dev.yml  docker-compose.yml  finwhiz-ui-simple.html  otherdocker.txt  start-dev.sh  test_full_pipeline.sh  test_portfolio_upload.sh
src/agentic_user_data_processing/: Dockerfile  README.md  app.py  db.py  models.py  pyproject.toml  schemas.py
src/agentic_user_data_processing/services/: __init__.py  context.py  extraction.py  extraction_1099.py  extraction_portfolio.py  parser.py  pdf_utils.py  storage.py  test_pdf_text_extraction.py
src/embedder/: Dockerfile  README.md  embedding.py  pyproject.toml
src/llm/: Dockerfile  README.md  chroma_utils.py  llm_service.py  pyproject.toml  view_bucket_contents.py
src/llm/finetuning/: .env  evaluate_tuned_model.py  run.sh  test_gemini_cost.py  train_gemini_full.py
src/webscraping/: .dockerignore  Dockerfile  README.md  pyproject.toml
src/webscraping/config/: gcs.json
src/webscraping/ingest/consumer_finance/: consumer_finance_config.yaml  fetch.py  normalize_cf.py  schema.py  write_gcs.py
src/webscraping/ingest/irs/: chunk.py  crawl_config.yaml  normalize.py  parse_pdf.py  schema.py  write_gcs.py
src/webscraping/ingest_shared/consumer_finance/: __init__.py  consumer_finance_config.yaml  normalize_cf.py  parse_html_cf.py
src/webscraping/ingest_shared/finra/: Makefile  ReadMe.md  to_ndjson.py
src/webscraping/ingest_shared/investorgov/: parse_html.py
src/webscraping/ingest_shared/irs/: fetch.py  normalize.py  parse_html.py
src/webscraping/ingest_shared/local_pdfs/: __init__.py  normalize_local_pdfs.py
src/webscraping/ingest_shared/shared/: __init__.py  chunk.py  fetch.py  parse_html.py  parse_pdf.py  schema.py  write_gcs.py
src/webscraping/ingest_shared_v1/: normalize_local_pdfs.py
src/webscraping/ingest_shared_v1/consumer_finance/: consumer_finance_config.yaml  normalize_cf.py  parse_html_cf.py
src/webscraping/ingest_shared_v1/finra/: finra_config.yaml  normalize_finra.py
src/webscraping/ingest_shared_v1/investor_gov/: investorgov_config.yaml  normalize_investorgov.py
src/webscraping/ingest_shared_v1/irs/: irs_config.yaml  normalize_irs.py
src/webscraping/ingest_shared_v1/shared/: __init__.py  parse_html.py  parse_pdf.py  schema.py
(+59 files in other folders)
