[project]
name = "agentic-user-data-processing"
version = "0.1.0"
description = "Agent microservice for chat history and document ingestion."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.1",
    "python-dotenv>=1.0.1",
    "langchain-google-vertexai>=2.1.2",
    "google-cloud-storage>=2.18.0",
    "pydantic>=2.12.0",
    "pypdf>=5.1.0",
    "python-multipart>=0.0.9",
    "pdfminer-six>=20231228",
    "pypdf2>=3.0.1",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
